--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -17,6 +17,13 @@
         float: right;
         width: 70%;
     }
+
+    div#formulario > h1{
+        font-size: 1.7em;
+    }
+    div#formulario > p{
+        font-size: 1em;
+    }
 }
 
 @media screen and (min-width: 992px) {
@@ -28,14 +35,19 @@
         width: 900px;
     }    
     section#login > div#imagem{
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
         background-position: center  ;
     }
     section#login > div#formulario{
-        float: right;
+        float: left;
         width: 50%;
-
+    }
+    div#formulario > h1{
+        font-size: 2em;
+    }
+    div#formulario > p{
+        font-size: 1.1em;
     }
 }
