--- a/estilos/style.css
+++ b/estilos/style.css
@@ -54,3 +54,12 @@ section#login > div#formulario {
     display: block;
     padding: 10px;
 }
+
+div#formulario > h1{
+    text-align: center;
+    font-size: 1.4em;
+    margin-bottom: 7px;
+}
+div#formulario > p{
+    font-size: 0.9em;
+}
