--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -26,6 +26,9 @@
     div#formulario > p{
         font-size: 1em;
     }
+    div.campo > input{
+        width: calc(100% - 44px);
+    }
 }
 
 @media screen and (min-width: 992px) {
@@ -53,5 +56,8 @@
     div#formulario > p{
         font-size: 1em;
         margin-bottom: 15px;
+    }
+    div.campo > input{
+        width: calc(100% - 44px);
     }
 }
