--- a/estilos/style.css
+++ b/estilos/style.css
@@ -66,12 +66,14 @@ div#formulario > p{
 
 form > div.campo{
     background-color: #5f2c82;
-    display: block;
+    display: flex;
     border: 2px solid #5f2c82;
     height: 40px;
     width: 100%;
     border-radius: 8px;
     margin: 5px 0px ;
+    align-items: center;
+    justify-content: center;
 }
 
 div.campo > label{
@@ -90,11 +92,10 @@ div.campo > input{
     background-color: #76e2df;
     font-size: 1em;
     height: 100%;
-
+    width: calc(100% - 44px);
     border: none;
     border-radius: 8px;
     padding: 4px;
-    transform: translateY(-13px);
 }
 
 div.campo > input:focus-within{
